# Koinos-Node-App

./: DEBUG_INSTRUCTIONS.md  README.md  VERSION_INFO.md  package-lock.json  package.json  tailwind.config.js
docs/screenshots/: README.md
release/v0.4.0/: RELEASE_NOTES.md  checksums.sha256
release/v0.4.0/koinos-node-app-v0.4.0/: package-lock.json  package.json
release/v0.4.0/koinos-node-app-v0.4.0/src/: index.css
release/v0.4.0/koinos-node-app-v0.4.0/src-tauri/: tauri.conf.json
release/v0.4.0/koinos-node-app-v0.4.0/src-tauri/src/: auto_installer.rs  logger.rs  native_installer.rs  node_manager.rs
release/v0.4.0/koinos-node-app-v0.4.0/src/components/: DebugConsole.tsx  ProgressBar.tsx  StatusModal.tsx  WelcomeScreen.tsx
release/v0.4.0/koinos-node-app.app/Contents/: Info.plist
releases/: README.md
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs  node_manager.rs  state_manager.rs
src/components/: Dashboard.tsx  DockerInstallPrompt.tsx  InitializationProgress.tsx  NodeControls.tsx  StatusIndicator.tsx
